Update alacritty config to 0.3.3

--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -27,12 +27,22 @@ window:
     x: 2
     y: 2
 
+  # Spread additional padding evenly around the terminal content.
+  dynamic_padding: false
+
   # Window decorations
-  # Setting this to false will result in window without borders and title bar.
-  decorations: true
+  #
+  # Values for `decorations`:
+  #     - full: Borders and title bar
+  #     - none: Neither borders nor title bar
+  #
+  # Values for `decorations` (macOS only):
+  #     - transparent: Title bar, transparent background and title bar buttons
+  #     - buttonless: Title bar, transparent background, but no title bar buttonsdecorations: true
+  decorations: full
 
 # Display tabs using this many cells (changes require restart)
-tabspaces: 4
+tabspaces: 5
 
 # When true, bold text is drawn using the bright variant of colors.
 draw_bold_text_with_bright_colors: true
@@ -77,9 +87,6 @@ font:
   # for retina displays, but for non-retina you probably want this set to
   # false.
   use_thin_strokes: true
-
-# Should display the render timer
-render_timer: false
 
 # Use custom cursor colors. If true, display the cursor in the cursor.foreground
 # and cursor.background colors, otherwise invert the colors of the cursor.
