--- a/tmuxinator/smooch.yml
+++ b/tmuxinator/smooch.yml
@@ -59,5 +59,5 @@ windows:
   - misc:
       layout: main-horizontal
       panes:
-        - ngrok start --all
+        # - ngrok start --all
         - cd ~/git/agent-console && npm run containers
