Fix kitty copy paste

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -81,6 +81,11 @@ shell_integration no-cursor
 
 clear_all_shortcuts yes
 
+# sensible copy and paste
+map cmd+c        copy_to_clipboard
+map cmd+v        paste_from_clipboard
+map shift+insert paste_from_clipboard
+
 # tmux window n: command-a n
 map command+1 send_text application \x01\x31
 map command+2 send_text application \x01\x32
