Start with nvim lua dotfiles from craftzdog

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -8,7 +8,7 @@
 # snazzy theme used as base
 
 foreground            #ebdbb2
-background            #272727
+background            #00141a
 selection_foreground  #655b53
 selection_background  #ebdbb2
 url_color             #d65c0d
@@ -49,8 +49,8 @@ color15  #ebdbb2
 # To test:
 # echo -e "\e[1mbold\e[0m\n\e[3mitalic\e[0m\n\e[4munderline\e[0m\n\e[9mstrikethrough\e[0m"
 font_family      Hack Nerd Font
-bold_font        auto
-italic_font      auto
+bold_font        Hack Nerd Font Bold
+italic_font      Hack Nerd Font Italic
 bold_italic_font auto
 font_size 13.0
 
