Fix kitty and bufferline colors

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,11 +6,12 @@
 # https://gist.github.com/lunks/0d5731693084b2831c88ca23936d20e8
 # gruvbox-dark colorscheme for kitty
 # snazzy theme used as base
+# And https://github.com/sainnhe/gruvbox-material/blob/master/autoload/gruvbox_material.vim
 
-foreground            #ebdbb2
-background            #00141a
+foreground            #e2cca9
+background            #1d2021
 selection_foreground  #655b53
-selection_background  #ebdbb2
+selection_background  #ebdbb2 
 url_color             #d65c0d
 
 # black
@@ -18,28 +19,28 @@ color0   #272727
 color8   #928373
 
 # red
-color1   #cc231c
-color9   #fb4833
+color1   #f2594b
+color9   #cc231c
 
 # green
-color2   #989719
-color10  #b8ba25
+color2   #b0b846
+color10  #989719
 
 # yellow
-color3   #d79920
-color11  #fabc2e
+color3   #e9b143
+color11  #d79920
 
 # blue
-color4  #448488
-color12 #83a597
+color4   #80aa9e
+color12  #448488
 
 # magenta
-color5   #b16185
-color13  #d3859a
+color5   #d3869b
+color13  #b16185
 
 # cyan
-color6   #689d69
-color14  #8ec07b
+color6   #8bba7f
+color14  #689d69
 
 # white
 color7   #a89983
@@ -48,6 +49,7 @@ color15  #ebdbb2
 # Fonts
 # To test:
 # echo -e "\e[1mbold\e[0m\n\e[3mitalic\e[0m\n\e[4munderline\e[0m\n\e[9mstrikethrough\e[0m"
+# msgcat --color=test
 font_family      Hack Nerd Font
 bold_font        Hack Nerd Font Bold
 italic_font      Hack Nerd Font Italic
