--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -8,43 +8,76 @@
 # snazzy theme used as base
 # And https://github.com/sainnhe/gruvbox-material/blob/master/autoload/gruvbox_material.vim
 
-foreground            #e2cca9
+foreground            #ebdbb2
 background            #1d2021
-selection_foreground  #655b53
-selection_background  #ebdbb2 
-url_color             #d65c0d
+selection_foreground  #504945
+selection_background  #ebdbb2
+url_color             #fe8019
 
 # black
-color0   #272727
-color8   #928373
+color0   #1d2021
+color8   #928374
 
 # red
-color1   #f2594b
-color9   #cc231c
+color1   #cc241d
+color9   #fb4934
 
 # green
-color2   #b0b846
-color10  #989719
+color2   #98971a
+color10  #b8bb26
 
 # yellow
-color3   #e9b143
-color11  #d79920
+color3   #d79921
+color11  #fabd2f
 
 # blue
-color4   #80aa9e
-color12  #448488
+color4   #458588
+color12  #83a598
 
 # magenta
-color5   #d3869b
-color13  #b16185
+color5   #b16286
+color13  #d3869b
 
 # cyan
-color6   #8bba7f
-color14  #689d69
+color6   #689d6a
+color14  #8ec07c
 
 # white
-color7   #a89983
+color7   #a89984
 color15  #ebdbb2
+
+# Standard gruvbox pallete:
+# (0)  bg0_h = ['#1d2021', 234]     " 29-32-33
+#      bg0   = ['#282828', 235]     " 40-40-40
+#      bg0_s = ['#32302f', 236]     " 50-48-47
+#      bg1   = ['#3c3836', 237]     " 60-56-54
+#      bg2   = ['#504945', 239]     " 80-73-69
+#      bg3   = ['#665c54', 241]     " 102-92-84
+#      bg4   = ['#7c6f64', 243]     " 124-111-100
+# (8)  gray  = ['#928374', 245]     " 146-131-116
+#      fg0   = ['#fbf1c7', 229]     " 253-244-193
+# (15) fg    = ['#ebdbb2', 223]     " 235-219-178
+#      fg2   = ['#d5c4a1', 250]     " 213-196-161
+#      fg3   = ['#bdae93', 248]     " 189-174-147
+# (7)  fg4   = ['#a89984', 246]     " 168-153-132
+#
+# bright
+# (9)  ['#fb4934', 167]     " 251-73-52
+# (10) ['#b8bb26', 142]     " 184-187-38
+# (11) ['#fabd2f', 214]     " 250-189-47
+# (12) ['#83a598', 109]     " 131-165-152
+# (13) ['#d3869b', 175]     " 211-134-155
+# (14) ['#8ec07c', 108]     " 142-192-124
+# (-)  ['#fe8019', 208]     " 254-128-25
+#
+# neutral
+# (1)  ['#cc241d', 124]     " 204-36-29
+# (2)  ['#98971a', 106]     " 152-151-26
+# (3)  ['#d79921', 172]     " 215-153-33
+# (4)  ['#458588', 66]      " 69-133-136
+# (5)  ['#b16286', 132]     " 177-98-134
+# (6)  ['#689d6a', 72]      " 104-157-106
+# (-)  ['#d65d0e', 166]     " 214-93-14
 
 # Fonts
 # To test:
