--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -98,6 +98,7 @@ window_padding_width 3.0
 macos_titlebar_color background
 macos_show_window_title_in all
 macos_thicken_font 0.15
+macos_option_as_alt yes
 draw_minimal_borders yes
 window_margin_width 0
 window_padding_width 0
